force-app/main/default/objects/Booking__c/fields/Survey_Destination_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Survey_Destination_Phrase__c</fullName>
    <description
  >The words "Ihre Reise nach &lt;Region&gt;" for the feedback emails, or just "Ihre Reise" when the booking has no region. Exists because Lightning email templates have no conditional logic and Region__c is blank on about half of all bookings - merging the region directly would produce "Ihre Reise nach ." for those guests. The German lives here so the sentence stays grammatical either way; if the email copy changes, this field changes with it.</description>
    <formula>IF(
  ISPICKVAL(Region__c, &quot;&quot;),
  &quot;Ihre Reise&quot;,
  &quot;Ihre Reise nach &quot; &amp; TEXT(Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >Used by the feedback emails. Generated automatically; do not edit.</inlineHelpText>
    <label>Survey Destination Phrase</label>
    <type>Text</type>
</CustomField>