force-app/main/default/objects/Booking__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <description
  >The guest's personal feedback survey link, assembled from the booking number and Form_Secret__c. Exists so an email template can merge the link directly; the base address comes from the Gx_Feedback_Setting__mdt Default record, so staging and production each resolve to their own site. Blank until GxFeedbackDispatch has minted a secret.</description>
    <formula>IF(
  OR(ISBLANK(Form_Secret__c), ISBLANK(BookingNumber__c)),
  &quot;&quot;,
  $CustomMetadata.Gx_Feedback_Setting__mdt.Default.Survey_Base_URL__c
    &amp; &quot;?b=&quot; &amp; BookingNumber__c
    &amp; &quot;&amp;k=&quot; &amp; Form_Secret__c
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >Personal feedback survey link for this guest. Generated automatically; do not edit.</inlineHelpText>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>