force-app/main/default/objects/Booking__c/fields/Survey_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_On__c</fullName>
    <description
  >When the guest was most recently asked for feedback - set by GxFeedbackDispatch as it prepares each invitation, and moved forward again by a reminder. Two things read it: the reminder pass, which waits Reminder_Delay_Days__c after this moment, and the survey's own expiry check, so a reminded guest gets a full validity window from the day they were last asked rather than from the day their trip ended. SurveySent__c only records that an invitation happened; this records when.</description>
    <inlineHelpText
  >When we last asked this guest for feedback. Set automatically.</inlineHelpText>
    <label>Survey Sent On</label>
    <type>DateTime</type>
</CustomField>