force-app/main/default/objects/Booking__c/fields/Survey_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Survey_Snapshot__c</fullName>
    <description
  >What the guest is asked to rate: the survey's lines as they were when the first feedback invitation went out, saved by GxFeedbackDispatch and read by the survey instead of the booking's current lines. Never rebuilt, so later changes to the booking (lines canceled, hotels swapped, stays added, automation touching line statuses) do not reach a survey already sent. Technical content (JSON), not for editing.</description>
    <label>Survey Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>