force-app/main/default/objects/Booking__c/fields/Survey_Trip_End__c.field-meta.xml
<CustomField>
    <fullName>Survey_Trip_End__c</fullName>
    <description
  >The trip's end date as it was when the guest was first invited to give feedback. Set once by GxFeedbackDispatch and left alone by reminders, resends and later changes to the booking. The Feedback tab (dashboard) filters and groups by it, and the survey offers only lines that start on or before it, so a stay added to the booking later neither moves the response nor gets rated.</description>
    <inlineHelpText
  >Reiseende zum Zeitpunkt der ersten Feedback-Einladung. Wird automatisch gesetzt; das Feedback-Dashboard ordnet die Antwort nach diesem Datum ein.</inlineHelpText>
    <label>Survey Trip End</label>
    <type>Date</type>
</CustomField>