force-app/main/default/objects/Booking__c/fields/Survey_Trip_Start__c.field-meta.xml
<CustomField>
    <fullName>Survey_Trip_Start__c</fullName>
    <description
  >The trip's start date as it was when the guest was first invited to give feedback. Set once by GxFeedbackDispatch and left alone by reminders, resends and later changes to the booking, so a response stays with the trip it was about.</description>
    <inlineHelpText
  >Reisebeginn zum Zeitpunkt der ersten Feedback-Einladung. Wird automatisch gesetzt und ändert sich nicht, wenn die Buchung später angepasst wird.</inlineHelpText>
    <label>Survey Trip Start</label>
    <type>Date</type>
</CustomField>