force-app/main/default/objects/Booking__c/listViews/Feedback_ausstehend.listView-meta.xml
<ListView>
    <fullName>Feedback_ausstehend</fullName>
    <columns>NAME</columns>
    <columns>BookingNumber__c</columns>
    <columns>End_Date__c</columns>
    <columns>Survey_Sent_On__c</columns>
    <columns>Survey_Reminder_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SurveySent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Feedback_Received_On__c</field>
        <operation>equals</operation>
    </filters>
    <label>Feedback ausstehend</label>
</ListView>